Fixed small masthead h1 on smaller devices.

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -164,7 +164,7 @@ header.masthead .header-content {
 }
 
 header.masthead .header-content h1 {
-  font-size: 30px;
+  font-size: 50px;
 }
 
 header.masthead .device-container {
